// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1736647660528,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "solo duerme",
      "telefono": "32432432",
    },
  ],
}
`;

exports[`Probar la clase de citas actualizar cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1736647660528,
      "mascota": "Hook2",
      "propietario": "Juan2",
      "sintomas": "solo duerme y no come",
      "telefono": "3343243",
    },
  ],
}
`;
